fix search lister on IE11

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article-filters.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article-filters.sass
@@ -161,11 +161,11 @@
     .search-form
         &__input
             @include breakpoint(desktop, up)
-                font-size: initial
+                font-size: 16px
         &__submit
             color: $primary
             @include breakpoint(desktop, up)
-                font-size: initial
+                font-size: 16px
                 top: 7px
                 color: initial
 
