--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_header-btn-nav.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_header-btn-nav.sass
@@ -8,7 +8,7 @@
         padding-bottom: 30px
         justify-content: center
         @include breakpoint(desktop-large, up)
-            overflow-y: initial
+            overflow-y: visible
     &__title
         display: inline-block
         margin-right: 16px
